! Fix tab bar scrollbar dragging on OSX

--- a/content/tabkit.css
+++ b/content/tabkit.css
@@ -5,14 +5,6 @@
 
 @namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");
 
-/************************************************************
- * Hack to expose overflow scrollbars for Javascript access *
- ************************************************************/
-
-.tabbrowser-tabs scrollbar { /*[Fx2only], due to https://bugzilla.mozilla.org/show_bug.cgi?id=369676 - in Fx3 we do this using ua.css*/
-  -moz-binding: url("chrome://tabkit/content/bindings.xml#scrollbar");
-}
-
 /*************************
  * Emphasize unread/selected tabs *
  *************************/
